feat: add Update documentation
